--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .container {
-    width: 100%;
+    min-height: 100%;
+    /* position: relative; */
 
     /* for visual purposes */
     border: 2px solid black;
@@ -9,13 +10,16 @@ header {
     margin-bottom: 200px;
 }
 
-footer {
-    margin-top: 400px;
-}
-
 .footer {
+    display: inline-block;
     width: 100%;
-    background-color: red;
+    height: 70px;
+    box-sizing: border-box;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+
+     /* visual */
+     border: 2px solid orange;
 }
 
 .logo {
@@ -52,18 +56,27 @@ button {
 }
 
 .nav-left, .nav-right {
-    display: inline-block;
+    /* display: inline-block; */
     padding: 20px;
-}
-
-.nav-left a, .nav-right a {
-    padding: 10px;
 }
 
 .nav-left {
     float: left;
+    box-sizing: border-box;
+}
+
+.nav-left li, .nav-right li {
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 5px 10px;
 }
 
 .nav-right {
     float: right;
+    box-sizing: border-box;
+}
+
+.spacer {
+    display: block;
+    height:400px;
 }
