--- a/style.css
+++ b/style.css
@@ -1,39 +1,40 @@
-.container {
-    min-height: 100%;
-    /* position: relative; */
+html, .body {
+    margin:0;
+    padding:0;
+}
 
-    /* for visual purposes */
-    border: 2px solid black;
+.container {
+    position: relative;
 }
 
 /* Header and Footer */
 
 header {
-    margin-bottom: 200px;
+    vertical-align: top;
+    padding-bottom: 200px;
+    position: relative;
+    top: 25px;
 }
 
-.footer {
-    display: inline-block;
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height: 70px;
+    height: 40px;
     box-sizing: border-box;
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
-
-     /* visual */
-     border: 2px solid orange;
+    padding-top: 20px;
 }
 
-/* Image, Searchbar, and Buttons */
+/* Image, Searchbar, Buttons, and Spacer */
 
 .logo {
     display: block;
     margin: auto;
     width: 100%;
     clear: both;
-
-    /* for visual purposes */
-    border: 1px solid blue;
 }
 
 .logo img {
@@ -41,9 +42,6 @@ header {
     margin: auto;
     height: 92px;
     width: 272px;
-
-    /* for visual purposes */
-    border: 1px solid red;
 }
 
 .searchbox input{
@@ -64,24 +62,26 @@ button {
     height:400px;
 }
 
+.body {
+    padding-bottom: 400px;
+}
+
 /* Navigation Bars */
+
 .nav-right {
     float: right;
-    box-sizing: border-box;
 }
 
 .nav-left {
     float: left;
-    box-sizing: border-box;
 }
 
 .nav-left, .nav-right {
-    /* display: inline-block; */
     padding: 20px;
 }
 
 .nav-left a, .nav-right a {
-    display: inline-block;
-    box-sizing: border-box;
     padding: 5px 10px;
+    position: relative;
+    bottom: 31px;
 }
